# rustris

./: Cargo.toml
rustris-core/: Cargo.toml
rustris-core/src/: board.rs  game.rs  input.rs  lib.rs  position.rs  queue.rs  renderer.rs  twist.rs
rustris-keyboard_query/: Cargo.toml
rustris-keyboard_query/src/: lib.rs
rustris-srs/: Cargo.toml
rustris-srs/src/: lib.rs
rustris-termion/: Cargo.toml
rustris-termion/src/: lib.rs
src/: main.rs
src/tetris/: board.rs  game.rs  input.rs  keyboard_query.rs  mod.rs  piece.rs  position.rs  queue.rs  random.rs  renderer.rs  srs.rs  termion.rs
tetris-core/: Cargo.toml
tetris-core/src/: board.rs  game.rs  input.rs  lib.rs  piece.rs  position.rs  renderer.rs
tetris-keyboard_query/: Cargo.toml
tetris-keyboard_query/src/: lib.rs
tetris-srs/: Cargo.toml
tetris-srs/src/: lib.rs
tetris-termion/: Cargo.toml
tetris-termion/src/: lib.rs
