[package]
name = "tetris"
version = "0.1.0"
edition = "2021"

[dependencies]
tetris-core = { path = "tetris-core", version = "0.1.0" }
tetris-srs = { path = "tetris-srs", version = "0.1.0" }
tetris-termion = { path = "tetris-termion", version = "0.1.0" }
tetris-keyboard_query = { path = "tetris-keyboard_query", version = "0.1.0" }
