[package]
name = "rustris"
version = "0.1.0"
edition = "2021"

[dependencies]
game-loop = "0.9.1"
rustris-core = { path = "rustris-core", version = "0.1.0" }
rustris-srs = { path = "rustris-srs", version = "0.1.0" }
rustris-termion = { path = "rustris-termion", version = "0.1.0" }
rustris-keyboard_query = { path = "rustris-keyboard_query", version = "0.1.0" }
